templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    # This is the "Magic" - it strips the /apache from the request
    # before sending it to the Apache server, so Apache sees it as a request for "/"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kubo-lab.test
    http:
      paths:
      - path: /apache            # <--- Path A
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
      - path: /                  # <--- Path B (Catch-all)
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
